--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Dennis Gaitsgory, Nick Rozenblyum, and Yakov Varshavsky)
 </p><h2>Course notes</h2>
 
 <p>  Algebraic geometry (notes by Arun Debray)
-<a href = "https://web.ma.utexas.edu/users/a.debray/lecture_notes/m392c_Raskin_AG_notes.pdf">[pdf]</a>
+<a href = "./m392c_Raskin_AG_notes.pdf">[pdf]</a>
 
 <p>  Class field theory (notes by Oron Propp) 
 <a href="./cft/notes.pdf">[pdf]</a>
