--- a/index.html
+++ b/index.html
@@ -288,6 +288,9 @@ Dennis Gaitsgory, Nick Rozenblyum, and Yakov Varshavsky)
 
 </p><h2>Course notes</h2>
 
+<p>  Introduction to geometric Langlands (notes by Zachary Carlini, Joakim F<span>&#230;</span>rgeman, David Fang, Soumik Ghosh, Michael Horzepa, Youseong Lee, Max Steinberg, Minghan Sun, and Vladyslav Zveryk)
+<a href = "./glcourse.pdf">[pdf]</a>
+
 <p>  Algebraic geometry (notes by Arun Debray)
 <a href = "./m392c_Raskin_AG_notes.pdf">[pdf]</a>
 
